Fix spacing of media list item thumbnails

--- a/themes/sbvfrd/less/medias.less
+++ b/themes/sbvfrd/less/medias.less
@@ -12,7 +12,7 @@
       text-align: center;
 
       a.img-responsive {
-        padding: 1.64rem 0 15% 20%;
+        padding: 1.64rem 1.5rem;
       }
     }
 
